--- a/src/pages/UserSettings/styles.module.css
+++ b/src/pages/UserSettings/styles.module.css
@@ -27,16 +27,20 @@
 
 .cards {
   display: flex;
+  flex-wrap: nowrap !important;
   gap: 16px;
+  width: 100%;
 
-  overflow-x: auto;
+  overflow-x: auto !important;
   overflow-y: hidden;
 
-  padding-bottom: 8px;
+  padding-bottom: 12px;
+  -webkit-overflow-scrolling: touch;
+  scroll-snap-type: x mandatory;
 }
 
 .cards::-webkit-scrollbar {
-  width: 8px;
+  height: 6px;
 }
 
 .cards::-webkit-scrollbar-track {
@@ -48,6 +52,10 @@
   border-radius: 999px;
 }
 
-.cards::-webkit-scrollbar-thumb:hover {
-  background-color: var(--brand-400);
+@media (max-width: 1200px) {
+  .fields {
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+  }
 }
